@@ -1,3 +1,4 @@
+inst/applications
 inst/SASdata
 inst/feedback
 ToDo
