@@ -1,6 +1,6 @@
 
-R version 2.14.1 (2011-12-22)
-Copyright (C) 2011 The R Foundation for Statistical Computing
+R version 2.14.2 (2012-02-29)
+Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: i686-pc-linux-gnu (32-bit)
 
@@ -102,7 +102,7 @@ function (type = c("univariate", "adjusted", p.adjust.methods),
     }
     return(p.adjust(pvals, method = type))
 }
-<environment: 0x8b25a10>
+<environment: 0x9fec740>
 
 $qfunction
 function (conf.level, adjusted = TRUE, ...) 
@@ -121,7 +121,7 @@ function (conf.level, adjusted = TRUE, ...)
     attr(ret, "error") <- calpha$estim.prec
     return(ret)
 }
-<environment: 0x8b25a10>
+<environment: 0x9fec740>
 
 $coefficients
  2times - 1time  4times - 1time   drugD - 1time   drugE - 1time 4times - 2times 
@@ -390,4 +390,22 @@ Female   Male
 > stopifnot(all.equal(
 + coef(glht(m2a, linfct = mcp(tension = "Tukey"))),
 + coef(glht(m2b, linfct = mcp(tension = "Tukey")))))
+> 
+> library("MASS")
+> xdf <- data.frame(y = gl(3, 10, ordered = TRUE), grp = sample(gl(3, 10)))
+> glht(polr(y ~ grp, data = xdf), mcp(grp = "Dunnett"))
+
+Re-fitting to get Hessian
+
+
+	 General Linear Hypotheses
+
+Multiple Comparisons of Means: Dunnett Contrasts
+
+
+Linear Hypotheses:
+           Estimate
+2 - 1 == 0   0.3085
+3 - 1 == 0  -0.9180
+
 > 
