@@ -1,4 +1,9 @@
 
+		CHANGES in `multcomp' VERSION 1.2-12
+
+    o    model.matrix.polr returns intercept which needs to be removed
+
+
 		CHANGES in `multcomp' VERSION 1.2-11
 
     o    handle merMod objects (package lme4 aka lme4Eigen)
